--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "license": "MIT",
     "keywords": ["tokenizer","token","sfphp","sincco"],
     "version": "1.0",
+    "require": {
+        "php": "^5.3.3 || ^7.0"
+    },
     "authors": [
         {
             "name": "Ivan Miranda",
