--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "Create and validate token for user data",
     "license": "MIT",
     "keywords": ["tokenizer","token","sfphp","sincco"],
-    "version": "1.1.1",
+    "version": "1.1.2",
     "require": {
-        "php": "^5.3.3 || ^7.0"
+        "php": ">=7.0"
     },
     "authors": [
         {
